--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.44.4",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
